--- a/starWarsBiometrics/index.html
+++ b/starWarsBiometrics/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +8,35 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <h1>Star Wars Biometrics</h1>
     </header>
-    <main role="main">  
-        <div class="container rounded">
-            <div class="row">
-                <form class="col-md-6"> 
-                    <div class="form-group">   
-                        <label for="textInput" class="form-label"><strong>Your star wars character:</strong></label>
-                        <input type="text" class="form-control mx-2" id="textInput" 
-                        placeholder="Enter a star wars hero">
-                        <button type="submit" class="btn btn-success">Submit</button>
-                    </div>
-                </form>
-                <div class="col-md-6">
-                    <div class="form-group mt-4">
-                        <label for="resultText" class="form-label"><strong></strong></label>
-                        <textarea name="" id="resultText" rows="10" cols="50">
-                            
-                        </textarea>
-                    </div> 
-                </div>   
+    <main role="main" class="container rounded">
+        <div class="row">
+            <form class="col-md-6">
+                <div class="form-group">
+                    <label for="textInput" class="form-label"><strong>Enter a name:</strong></label>
+                    <input type="text" class="form-control mx-2" id="textInput" placeholder="Enter a name of Star Wars hero">
+                    <button type="submit" class="btn btn-success">Submit</button>
+                </div>
+            </form>
+            <div class="col-md-6">
+                <div class="form-group mt-4">
+                    <label for="resultText" class="form-label"><strong>Character Info:</strong></label>
+                    <textarea id="resultText" class="form-control" rows="10" cols="50"></textarea>
+                </div>
             </div>
         </div>
     </main>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>   
+    <footer class="footer text-center"> 
+        <div >
+            <p>&copy; 2023 Built and Designed by Xiahui Liu - All Rights Reserved.</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
