change draw one card to draw 4 cards

--- a/drawAcard/index.html
+++ b/drawAcard/index.html
@@ -18,7 +18,7 @@
                 <button type="submit" id="myBtn" class="btn btn-success">Draw Cards</button>
             </div>
         </div>
-        <div id="display" class="card-container"></div>
+        <div id="cardsContainer" class="card-container"></div>
     </main>
     <footer class="footer text-center"> 
         <div >
